--- a/index.html
+++ b/index.html
@@ -494,12 +494,9 @@
 * Gibt es sprachliche Gemeinsamkeiten zwischen den Genres der Fantasy und Dystopie? 
 
 
-
-
-
-
-
-
+---
+### Erläuterungen zur Stilometrie
+* Siehe: https://dh-trier.github.io/dh-vorlesung/reveal/DH-E11_Textanalyse-1.html#/4/4
 
 
 
@@ -620,17 +617,102 @@
 * Müller, Meinard, ‘Music Representations’, in Advances in Music Information Retrieval, Studies in Computational Intelligence (Berlin Heidelberg: Springer-Verlag, 2010), pp. 1–37 <https://doi.org/10.1007/978-3-642-11674-2>
 
 
+---
+### Rechercheaufgabe A: Weitere Aspekte?
+
+---
+### Music Recommender Systeme
+* Was wird empfohlen? 
+  * Einzelne Stücke
+  * Alben
+  * Künstler
+  * Musiksquenzen
+* Auf welcher Grundlage beruht die Empfehlung?
+  * "collaborative filtering"
+  * "content-based"
+    * metadata 
+    * user-generated text
+    * audio-signal
+    * derived features
 
 
+---
+### Rechercheaufgabe B: Schubert
+<a href="https://www.youtube.com/watch?v=R69JYEfCSeI"><img height="200" data-src="img/schubert.png"></a>
+* [Video](https://www.youtube.com/watch?v=R69JYEfCSeI) und [Artikel](https://www.nbcnews.com/mach/science/ai-can-now-compose-pop-music-even-symphonies-here-s-ncna1010931)
+* Erläutern Sie in einem zusammenhängenden, kurzen Text (etwa 100 Wörter) anhand einiger Argumente, die Ihnen besonders wichig erscheinen, ob hier ein Verfahren der Künstlichen Intelligenz erfolgreich für das Komponieren klassischer Musik eingesetzt wurde oder nicht.
+
+---
+### Fragen (1a)
+* War der Algorithmus Ihrer Meinung nach erfolgreich? (J/N/T)
+
+---
+### Fragen (1b)
+* Welche Argumente sprechen für den Erfolg des Algorithmus?
+  * Ich habe selbst nicht herausgehört, dass es algorithmisch generierte Musik war
+  * Die ausgebildeten Musiker schienen überzeugt
+  * Die Musik klingt wirklich wie klassische Musik
+  * Die Musik klingt wirklich wie Schubert
+  * Die Musik klingt ästhetisch ansprechend
+  * Die Musik ist sinnvoll bezüglich Rhythmus, Tonart und/oder Melodie
+  * Musik ist selbst regelhaft, sodass ein Algorithmus das gut kann
+  
+
+---
+### Fragen (1c)
+* Welche Argumente sprechen gegen den Erfolg des Algorithmus? 
+  * Der Algorithmus ist nicht in der Lage, musikalische Übergänge zu gestalten
+  * Der Algorithmus beachtet die Gesamtstruktur der Symphonie nicht
+  * Die resultierende Musik wiederholt sich zu sehr
+  * Die Musik klingt eben doch nicht ganz wie Schubert
+  * Der Algorithmus hat nur die Noten generiert, nicht die aufgeführte Musik
+  * Der Komponist hat aus mehreren Optionen die beste herausgesucht
+  * Ob Schubert die Symphonie genau so weitergeführt hätte, ist zweifelhaft
+
+---
+### Fragen (2a)
+* Finden Sie, dass man dem Algorithmus Kreativität zusprechen kann?
+
+---
+### Fragen (2b)
+* Welche Argumente sprechen Ihrer Meinung nach für die Kreativität?
+  * Der Algorithmus hat neue Strukturen generiert.
+  * Der Algorithmus hat neue Melodien generiert. 
+  * Dem Algorithmus gehen nie die Ideen aus
+  * Das Ergebnis war nicht vorhersehbar. 
+
+---
+### Fragen (2c)
+* Welche Argumente sprechen Ihrer Meinung nach gegen die Kreativität?
+  * Letztlich setzt der Algorithmus nur zufällig vorhandene Muster neu zusammen
+  * Ein KI-Algorithmus ist wie ein Instrument, erst gemeinsam mit einem Menschen gelingt es wirklich
+  * Ein KI-Algorithmus hat keine Individualität / Originalität
+  * Der Algorithmus kann keine Emotionen berücksichtigen
+  * Der Algorithmus "versteht" die Musik nicht wirklich
+  * Es bleibt "gutes Handwerk" ohne Aussage / Intention
+  * Der Algorithmus kann sich nicht durch Erfahrung in der Welt inspirieren
 
 
+---
+### Antwort-Beispiel
+>Ja, das Verfahren der Künstlichen Intelligenz wurde erfolgreich für das Komponieren klassischer Musik eingesetzt, da es wirklich so klingt, als sei es vom ursprünglichen Komponisten der Symphonie stammt. Es wurde erwähnt eine K.I. könnte ja niemals an die kreativen Fähigkeiten eines Menschen rankommen oder diese eben ersetzen, aber ich finde eine K.I. muss hierfür ja nicht eine angeborene „menschliche“ Kreativität haben, wenn das Verfahren doch nachweislich funktioniert hat. Ich fand den Satz, dass selbst die schönste Musik letztendlich nur ein Code sei, da ganz passend. Ein weiteres gutes Argument dafür ist, dass eine K.I. im Gegensatz zu einem Menschen ja nie müde wird und somit kontinuierlich Songs komponieren könnte.
+
+---
+### Antwort-Beispiel
+>Meiner Meinung nach wurde hier mithilfe von Künstlicher Intelligenz erfolgreich ein Musikstück geschrieben.
+Ein erstes Argument dafür sehe ich darin, dass für mich beim Hören die von der KI komponierten Teile nicht von denen von Schubert komponierten Teilen zu unterscheiden war. Zwar bin ich auch nicht wirklich ein Fan von klassischer Musik, aber selbst der Musiker im Video sagt, er könne beides nicht auseinander halten, was definitiv ein Indiz dafür ist, dass die Künstliche Intelligenz beim Komponieren erfolgreich war. Des Weiteren hätte ich bei künstlich erzeugter Musik erwartet, dass sie viel eintöniger und langweiliger klingen würde, als das gezeigte Stück, das viele Variationen und verschiedene Instrumente beinhaltete. Zwar werden im Video auch negative Kommentare gezeigt, die das Stück unter anderem als "Müll" bezeichnen, dem hätte ich aber entgegenzusetzen, dass dieses Stück sehr viel anspruchsvoller klingt, als vieles, was heutzutage im Radio läuft und von echten Menschen produziert wurde. Daher kann man meiner Meinung nach schon sagen, dass die KI hier erfolgreich eingesetzt wurde.
+
+---
+### Anwort-Beispiel
+>Wurde eine künstliche Intelligenz erfolgreich eingesetzt um Schuberts klassisches Werk (Symphony) zu vollenden?
+Ich bin der Ansicht teilweise. Zu aller Erst sollte gesagt sein, dass dies ein riesiger Fortschritt ist. Ein Werk so zu vollenden ohne auch nur einmal mit dem original Komponisten gesprochen oder einen „live“ Einblick in seine Vorgehensweise bekommen zu haben, ist an sich schon ein (Kunst)werk. Durch die neuste Technologie wird uns ein Einblick in die Intentionen und Gedanken eines Menschen gegeben, der sich längst nicht mehr selber dazu äußern kann. Durch Muster und Wiederholungen werden Gedankengänge und die daraus resultierenden Endprodukte aufs kleinste und einfachste heruntergebrochen. Doch für das Beispiel von Schubert bedarf es noch weitere Experten, die wissen wie sie mit dem herausgezogenen Datenset weiterverfahren. So hat die AI nicht all die Arbeit getan, sondern Cantor entwarf das finale Stück. Demnach bleibe ich bei meiner Meinung und sage die künstliche Intelligenz hat eine enorme Rolle gespielt für den Erfolg des Projektes, jedoch klappt es (noch) nicht ganz ohne Feinschliff um es auf 100% zu bringen.
 
 
 
 
 
 --
-## Thema 5: Stilometrische Autorschaftsattribution
+## Thema 5: Topic Modeling
 
 
 
