--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   * ein neues Produkt oder einen Service
   * eine neue Anwendung mit gesellschaftlichem Nutzen
   * eine neue Anwendung für Medien, Kommunikation, Literatur, etc. 
-* Mögliche Zielgruppen
+* Mögliche Zielgruppen haben,
   * Journalisten, Verlage, Social Media, Bibliotheken
   * Endnutzer:innen, "die Bevölkerung"
   * Forschende in DH, CL, Medienwissenschaften, etc. 
@@ -755,28 +755,131 @@ Ich bin der Ansicht teilweise. Zu aller Erst sollte gesagt sein, dass dies ein r
 
 
 
+--
+## Thema 5: Digitale Kunstgeschichte 
+
+
+---
+### Rechercheaufgabe (A)
+* Bitte schauen Sie das folgende Video, in dem Peter Bell die Digitale Kunstgeschichte und Critical Machine Vision vorstellt. Der Vortrag, um den es geht, läuft im Video von Minute 11:30 bis 55:55.
+* Direkter Link zum Startpunkt: https://www.youtube.com/watch?v=wrMvOsDHB7s&t=690s
+* Welche Unterschiede, welche Ähnlichkeiten sehen Sie zu den anderen Teilbereichen der Digital Humanities, die wir schon kennengelernt haben, also der Digitalen Edition, der Computational Literary Studies und der Digitalen Musikwissenschaft? (Abgesehen vom offensichtlichen Unterschied, dass es hier um visuelle Medien geht, nicht um Text oder Musik.) Nennen Sie in Stichpunkten 2-3 Unterschiede und 2-3 Ähnlichkeiten.
+
+---
+### Ähnlichkeiten: Gegenstände
+* Multimedialität (Text, Bild, Audio) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Es werden teils sehr große Datenmengen berücksichtigt <!-- .element: class="fragment" data-fragment-index="2" -->
+* Große Bedeutung der Metadaten <!-- .element: class="fragment" data-fragment-index="3" -->
+* Interaktive Publikation / Präsentation der Daten in Datenbanken <!-- .element: class="fragment" data-fragment-index="4" -->
+
+
+---
+### Ähnlichkeiten: Methoden
+* Statistische Analysen (Distant Reading => Distant Viewing) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Ähnlichkeitsanalysen (auf Vektorbasis), auch für Künstleridentifikation <!-- .element: class="fragment" data-fragment-index="2" -->
+* Es gibt immer auch Fehler, keine (quantitative) Methode ist 100% exakt <!-- .element: class="fragment" data-fragment-index="3" -->
+* Machine Learning / Neuronale Netze zur Analyse großer Datenmengen <!-- .element: class="fragment" data-fragment-index="4" -->
+* Generative Ansätze: Algorithmen, um Musik, Texte, Bilder zu generieren <!-- .element: class="fragment" data-fragment-index="5" -->
+
+
+---
+### Ähnlichkeiten: Perspektiven
+* Digitalisierung schützt und archiviert fragile Gegenstände <!-- .element: class="fragment" data-fragment-index="1" -->
+* Präsentation der Gegenstände auf eigenen Webseiten (Textedition, Musikedition, Korpora, Bilddatenbanken) <!-- .element: class="fragment" data-fragment-index="2" -->
+* An digital vorliegenden Gegenständen werden Eigenschaften messbar <!-- .element: class="fragment" data-fragment-index="3" -->
+* Arbeitsschritte: Digitalisierung, Erschließung, Edition, Analyse, Generierung <!-- .element: class="fragment" data-fragment-index="4" -->
+* Nutzung von Informationsvisualisierung für Analyse und Veranschaulichung <!-- .element: class="fragment" data-fragment-index="5" -->
+* Ständige Weiterentwicklung und Verbesserung (=Forschung) <!-- .element: class="fragment" data-fragment-index="6" -->
+
+---
+### Unterschiede
+* Spezifische Metadatenstandards, bspw. CIDOC-CRM (Comité international pour la documentation / Conceptual Reference Model): siehe http://www.cidoc-crm.org/  <!-- .element: class="fragment" data-fragment-index="1" -->
+* Spezifische Eigenschaften von Bildmedien, die digitalisiert, erkannt und analytisch erfasst werden müssen: Farbe, Komposition / Bildstruktur, Ikonografie, dargestellte Objekte, 3D-Aspekte, Haptik <!-- .element: class="fragment" data-fragment-index="2" -->
+* Cross-mediales Generieren von Inhalten: Captions (Text) auf Grundlage von Gemälden (Bild) <!-- .element: class="fragment" data-fragment-index="3" -->
+* "Style Transfer" beim Generieren neuer Daten vor allem mit Bildern und Videos  <!-- .element: class="fragment" data-fragment-index="4" -->
+* Optimierung von Fotos (aber: Nachkorrektur von OCR mit Sprachmodellen) <!-- .element: class="fragment" data-fragment-index="5" -->
+
+
+---
+### Diskussionswürdige Aspekte 
+* Die Gefahr der Diskriminierung durch Algorithmen ist bei Bildern größer: bspw. Facial Recognition (aber: bspw. Forensic Linguistics) <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
+* Die Rolle der Interpretation und der Ästhetik ist bei kunsthistorischen Analysen größer als in der Musik- oder Literaturwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="2" -->
+* Die (digitale) Kunstgeschichte legt einen stärkeren Fokus auf die genaue Analyse von Einzelwerken als die Musik- oder Literaturwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="3" -->
+* Die digitale Kunstgeschichte ist eine jüngere Entwicklung als Computational Literary Studies oder Digitale Musikwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="4" -->
+* Critical Machine Vision (kritische, geisteswissenschaftliche Reflexion der digitalen Methoden): Wie würde das in der digitalen Musikwissenschaft oder den Computational Literary Studies funktionieren? <!-- .element: class="fragment fade-in-then-out" data-fragment-index="5" -->
+
+
+---
+### (B) Rechercheaufgabe "ARTIGO"
+
+* Besuchen Sie die folgende Webseite, auf der Sie eine Anwendung namens "ARTIGO (Tagging Game)" aus der digitalen Kunstgeschichte finden, die Spiel und Wissenschaft verbindet: https://www.artigo.org/taggingGame.html
+* Sie können die Sprache nach Wunsch einstellen (Deutsch, Englisch, Französisch oben links). Die Grundidee des Spiels ist es, durch möglichst präzise und sinnvolle Schlagworte zu einem Bild möglichst viele Punkte zu bekommen. Ein Bild wird jeweils 60 Sekunden lang angezeigt, Sie können darunter in das kleine Textfeld Schlagworte eintippen. Spielen Sie das Spiel mit mindestens 5 verschiedenen Bildern.
+* (1) Beschreiben Sie ihre Erfahrung damit in 2-3 Sätzen. Wie hoch war ihre beste Punktzahl?
+* (2) Inwiefern enstehen hier vielleicht bessere, inwiefern vielleicht weniger gute Daten, als in dem Beispiel der Bildbeschreibungen, die Peter Bell im zweiten Teil seines Vortrags (insbesondere im Abschnitt ab Minute 50:20 im Video) besprochen hat hat?
+
+
+---
+### Erfahrungen mit ARTIGO
+* Durch den spielerischen Aspekt der Website ist die Motivation hoch. 
+* Man lernt etwas über die Gemälde und kann sich so weiterbilden. 
+* Es ist schwierig vorauszusagen, welche Wörter Punkte bringen. 
+* Die trivialen Schlagworte brachten eher Punkte als die schwierigen. 
+* Die Benutzungsoberfläche ist intuitiv und leicht verständlich. 
+* Ich war überrascht, wie viel Spaß das Spiel macht. 
+* Bei abstrakten Gemälden waren schwieriger als bei gegenständlichen, Punkte zu bekommen. 
+* Die 60 Sekunden waren bei einigen Bildern viel zu kurz. 
+
+
+--- 
+### Vergleich ARTIGO / generierte Bildbeschreibungen
+
+---
+### Argumente für bessere Daten bei ARTIGO
+* Input von den unterschiedlichsten Menschen, vielfältigere Meinungen (?)
+* Bei den Gemälden sind Probleme wie Sexismus / Rassimus weniger wahrscheinlich
+* Es entstehen detailreichere Angaben
+* Durch die Anreizstruktur des Spiels entstehen gute Daten
+* Durch die Einzelwörter entstehen objektivere Daten als bei Phrasen
+
+
+--- 
+### Argumente für schlechtere Daten bei ARTIGO
+* Wegen des Zeitdrucks werden weniger durchdachte Stichworte genannt
+* Die einzelnen Schlagwörter sind oberflächlicher als die Phrasen
+* Es können auch viele Fehlangaben gemacht werden (?)
+* Es geht offenbar eher um Quantität als um Qualität (?)
+* Die Betrachter können die Bilder sehr unterschiedlich interpretieren
+* Die Betrachter sind oft keine Experten für Kunst
+
+
+
+
+
+
+
+
+
+
 
 
 --
-## Thema 5: Topic Modeling
-
-
-
-
---
-## Thema 6: Linked Open Data
-
-
+## Thema 6: Textkodierung
 
 
 --
-## Thema 7: Visualisierung
-
-
+## Thema 7: Topic Modeling
 
 
 --
-## Thema 8: Open Science
+## Thema 8: Linked Open Data
+
+
+--
+## Thema 9: Visualisierung
+
+
+--
+## Thema 10: Open Science
 
 
 
