--- a/index.html
+++ b/index.html
@@ -820,14 +820,14 @@ Ich bin der Ansicht teilweise. Zu aller Erst sollte gesagt sein, dass dies ein r
 
 ---
 ### Erfahrungen mit ARTIGO
-* Durch den spielerischen Aspekt der Website ist die Motivation hoch.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
-* Man lernt etwas über die Gemälde und kann sich so weiterbilden.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="2" -->
-* Es ist schwierig vorauszusagen, welche Wörter Punkte bringen.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="3" -->
-* Die trivialen Schlagworte brachten eher Punkte als die schwierigen.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="4" -->
-* Die Benutzungsoberfläche ist intuitiv und leicht verständlich.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="5" -->
-* Ich war überrascht, wie viel Spaß das Spiel macht.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
-* Bei abstrakten Gemälden waren schwieriger als bei gegenständlichen, Punkte zu bekommen.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="6" -->
-* Die 60 Sekunden waren bei einigen Bildern viel zu kurz.  <!-- .element: class="fragment fade-in-then-out" data-fragment-index="7" -->
+* Durch den spielerischen Aspekt der Website ist die Motivation hoch.  <!-- .element: class="fragment" data-fragment-index="1" -->
+* Man lernt etwas über die Gemälde und kann sich so weiterbilden.  <!-- .element: class="fragment" data-fragment-index="2" -->
+* Es ist schwierig vorauszusagen, welche Wörter Punkte bringen.  <!-- .element: class="fragment" data-fragment-index="3" -->
+* Die trivialen Schlagworte brachten eher Punkte als die schwierigen.  <!-- .element: class="fragment" data-fragment-index="4" -->
+* Die Benutzungsoberfläche ist intuitiv und leicht verständlich.  <!-- .element: class="fragment" data-fragment-index="5" -->
+* Ich war überrascht, wie viel Spaß das Spiel macht.  <!-- .element: class="fragment" data-fragment-index="1" -->
+* Bei abstrakten Gemälden waren schwieriger als bei gegenständlichen, Punkte zu bekommen.  <!-- .element: class="fragment" data-fragment-index="6" -->
+* Die 60 Sekunden waren bei einigen Bildern viel zu kurz.  <!-- .element: class="fragment" data-fragment-index="7" -->
 
 
 ---
@@ -835,21 +835,21 @@ Ich bin der Ansicht teilweise. Zu aller Erst sollte gesagt sein, dass dies ein r
 
 ---
 ### Argumente für bessere Daten bei ARTIGO
-* Input von den unterschiedlichsten Menschen, vielfältigere Meinungen (?) <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
-* Bei den Gemälden sind Probleme wie Sexismus / Rassimus weniger wahrscheinlich <!-- .element: class="fragment fade-in-then-out" data-fragment-index="2" -->
-* Es entstehen detailreichere Angaben <!-- .element: class="fragment fade-in-then-out" data-fragment-index="3" -->
-* Durch die Anreizstruktur des Spiels entstehen gute Daten <!-- .element: class="fragment fade-in-then-out" data-fragment-index="4" -->
-* Durch die Einzelwörter entstehen objektivere Daten als bei Phrasen <!-- .element: class="fragment fade-in-then-out" data-fragment-index="5" -->
+* Input von den unterschiedlichsten Menschen, vielfältigere Meinungen (?) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Bei den Gemälden sind Probleme wie Sexismus / Rassimus weniger wahrscheinlich <!-- .element: class="fragment" data-fragment-index="2" -->
+* Es entstehen detailreichere Angaben <!-- .element: class="fragment" data-fragment-index="3" -->
+* Durch die Anreizstruktur des Spiels entstehen gute Daten <!-- .element: class="fragment" data-fragment-index="4" -->
+* Durch die Einzelwörter entstehen objektivere Daten als bei Phrasen <!-- .element: class="fragment" data-fragment-index="5" -->
 
 
 ---
 ### Argumente für schlechtere Daten bei ARTIGO
-* Wegen des Zeitdrucks werden weniger durchdachte Stichworte genannt <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
-* Die einzelnen Schlagwörter sind oberflächlicher als die Phrasen <!-- .element: class="fragment fade-in-then-out" data-fragment-index="2" -->
-* Es können auch viele Fehlangaben gemacht werden (?) <!-- .element: class="fragment fade-in-then-out" data-fragment-index="3" -->
-* Es geht offenbar eher um Quantität als um Qualität (?) <!-- .element: class="fragment fade-in-then-out" data-fragment-index="4" -->
-* Die Betrachter können die Bilder sehr unterschiedlich interpretieren <!-- .element: class="fragment fade-in-then-out" data-fragment-index="5" -->
-* Die Betrachter sind oft keine Experten für Kunst <!-- .element: class="fragment fade-in-then-out" data-fragment-index="6" -->
+* Wegen des Zeitdrucks werden weniger durchdachte Stichworte genannt <!-- .element: class="fragment" data-fragment-index="1" -->
+* Die einzelnen Schlagwörter sind oberflächlicher als die Phrasen <!-- .element: class="fragment" data-fragment-index="2" -->
+* Es können auch viele Fehlangaben gemacht werden (?) <!-- .element: class="fragment" data-fragment-index="3" -->
+* Es geht offenbar eher um Quantität als um Qualität (?) <!-- .element: class="fragment" data-fragment-index="4" -->
+* Die Betrachter können die Bilder sehr unterschiedlich interpretieren <!-- .element: class="fragment" data-fragment-index="5" -->
+* Die Betrachter sind oft keine Experten für Kunst <!-- .element: class="fragment" data-fragment-index="6" -->
 
 
 
