--- a/index.html
+++ b/index.html
@@ -802,10 +802,10 @@ Ich bin der Ansicht teilweise. Zu aller Erst sollte gesagt sein, dass dies ein r
 
 ---
 ### Diskussionswürdige Aspekte 
-* Die Gefahr der Diskriminierung durch Algorithmen ist bei Bildern größer: bspw. Facial Recognition (aber: bspw. Forensic Linguistics) <!-- .element: class="fragment fade-in-then-out" data-fragment-index="1" -->
-* Die Rolle der Interpretation und der Ästhetik ist bei kunsthistorischen Analysen größer als in der Musik- oder Literaturwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="2" -->
-* Die (digitale) Kunstgeschichte legt einen stärkeren Fokus auf die genaue Analyse von Einzelwerken als die Musik- oder Literaturwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="3" -->
-* Die digitale Kunstgeschichte ist eine jüngere Entwicklung als Computational Literary Studies oder Digitale Musikwissenschaft <!-- .element: class="fragment fade-in-then-out" data-fragment-index="4" -->
+* Die Gefahr der Diskriminierung durch Algorithmen ist bei Bildern größer: bspw. Facial Recognition (aber: bspw. Forensic Linguistics) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Die Rolle der Interpretation und der Ästhetik ist bei kunsthistorischen Analysen größer als in der Musik- oder Literaturwissenschaft <!-- .element: class="fragment" data-fragment-index="2" -->
+* Die (digitale) Kunstgeschichte legt einen stärkeren Fokus auf die genaue Analyse von Einzelwerken als die Musik- oder Literaturwissenschaft <!-- .element: class="fragment" data-fragment-index="3" -->
+* Die digitale Kunstgeschichte ist eine jüngere Entwicklung als Computational Literary Studies oder Digitale Musikwissenschaft <!-- .element: class="fragment" data-fragment-index="4" -->
 * Critical Machine Vision (kritische, geisteswissenschaftliche Reflexion der digitalen Methoden): Wie würde das in der digitalen Musikwissenschaft oder den Computational Literary Studies funktionieren? <!-- .element: class="fragment fade-in-then-out" data-fragment-index="5" -->
 
 
